--- a/styles.css
+++ b/styles.css
@@ -450,7 +450,7 @@ footer .footer-bottom {
 .popular-posts .popular-post img {
   width: 100%;
   height: 150px;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
 .popular-posts .popular-post h3 {
